--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Wang, Tao",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^24.1.0"
+    "jest": "^24.1.0",
+    "sinon": "^7.2.3"
   }
 }
