--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jest -c test/jest.config.js"
+    "test": "jest -c jest.config.js"
   },
   "author": "Wang, Tao",
   "license": "ISC",
